test/expect/cmd.o-missing.stderr.txt
^error: argument to '-o' is missing \(expected 1 value\)

Usage: castxml .*$
